# air_plot

./: README.rst  pyproject.toml
air_plot/: Plotter.py  air_plot.py
baronerd/: BarometricMetronome.py  Plotter.py
baronerd/data/: liveData.csv
baronerd/data/differentials/: next7DaysDataDiffFile.csv
tests/: test_air_plot.py  test_baronerd.py
