[tool.poetry]
name = "air_plot"
version = "0.1.0"
description = "A simple local barometric pressure measurement plotter using csv data source"
authors = ["roboto84 <7658704+roboto84@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = ""
repository = ""
documentation = ""

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
